--- a/Software/GUI/Rover_test/images.qrc
+++ b/Software/GUI/Rover_test/images.qrc
@@ -1,6 +1,21 @@
 <RCC>
     <qresource prefix="/image"/>
-    <qresource prefix="/">
+    <qresource prefix="/images">
         <file>arrow_up.png</file>
+        <file>arrow_down.png</file>
+        <file>BBB.png</file>
+        <file>BBB2.png</file>
+        <file>Cam_Pulsador.jpeg</file>
+        <file>Cam_Rover.jpeg</file>
+        <file>ESP32_CAM.png</file>
+        <file>ESP32_CAM2.png</file>
+        <file>Joystick.jpg</file>
+        <file>newWindow.PNG</file>
+        <file>pulsador.png</file>
+        <file>trajectory2.png</file>
+        <file>Battery_full.svg</file>
+        <file>light_off.svg</file>
+        <file>light_on.svg</file>
     </qresource>
+    <qresource prefix="/StyleSheet"/>
 </RCC>
