--- a/Software/MotorDriver/MainWindow.ui
+++ b/Software/MotorDriver/MainWindow.ui
@@ -18,7 +18,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QLineEdit" name="qCmdLine_lineEdit">
+       <widget class="QLineEdit" name="qLeftSpeed_lineEdit">
         <property name="inputMask">
          <string/>
         </property>
@@ -28,28 +28,12 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="qValue_lineEdit">
+       <widget class="QLineEdit" name="qRightSpeed_lineEdit">
         <property name="inputMask">
          <string/>
         </property>
         <property name="text">
          <string/>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="qMotorSelector_comboBox">
-        <property name="editable">
-         <bool>false</bool>
-        </property>
-        <property name="currentIndex">
-         <number>-1</number>
-        </property>
-        <property name="maxVisibleItems">
-         <number>20</number>
-        </property>
-        <property name="maxCount">
-         <number>20</number>
         </property>
        </widget>
       </item>
