--- a/Software/MotorDriver/resources.qrc
+++ b/Software/MotorDriver/resources.qrc
@@ -1,5 +1,3 @@
 <RCC>
-    <qresource prefix="/data">
-        <file>userrequests_data.txt</file>
-    </qresource>
+    <qresource prefix="/data"/>
 </RCC>
