Add communication functions, timers, ESP32-CAM

--- a/Software/GUI/Rover_test/images.qrc
+++ b/Software/GUI/Rover_test/images.qrc
@@ -16,6 +16,9 @@
         <file>Battery_full.svg</file>
         <file>light_off.svg</file>
         <file>light_on.svg</file>
+        <file>headlight.png</file>
+        <file>speaker.svg</file>
+        <file>headlight2.png</file>
     </qresource>
     <qresource prefix="/StyleSheet"/>
 </RCC>
