--- a/Software/GUI/Rover_test/mainwindow.ui
+++ b/Software/GUI/Rover_test/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -33,7 +33,7 @@
      <widget class="QPushButton" name="qCam1Down_pushButton">
       <property name="geometry">
        <rect>
-        <x>970</x>
+        <x>1010</x>
         <y>540</y>
         <width>51</width>
         <height>71</height>
@@ -56,7 +56,7 @@
      <widget class="QPushButton" name="qCam1Up_pushButton">
       <property name="geometry">
        <rect>
-        <x>970</x>
+        <x>1010</x>
         <y>460</y>
         <width>51</width>
         <height>71</height>
@@ -79,7 +79,7 @@
      <widget class="QProgressBar" name="qPuls_progressBar">
       <property name="geometry">
        <rect>
-        <x>970</x>
+        <x>1000</x>
         <y>160</y>
         <width>151</width>
         <height>31</height>
@@ -98,9 +98,9 @@
      <widget class="QPushButton" name="qPuls_pushButton">
       <property name="geometry">
        <rect>
-        <x>950</x>
+        <x>1000</x>
         <y>57</y>
-        <width>211</width>
+        <width>221</width>
         <height>101</height>
        </rect>
       </property>
@@ -121,8 +121,8 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>950</x>
-        <y>20</y>
+        <x>1090</x>
+        <y>17</y>
         <width>51</width>
         <height>31</height>
        </rect>
@@ -140,7 +140,7 @@
       <property name="geometry">
        <rect>
         <x>1180</x>
-        <y>330</y>
+        <y>280</y>
         <width>91</width>
         <height>31</height>
        </rect>
@@ -157,7 +157,7 @@
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>970</x>
+        <x>1010</x>
         <y>420</y>
         <width>61</width>
         <height>31</height>
@@ -169,13 +169,13 @@
        </font>
       </property>
       <property name="text">
-       <string>Cam1: </string>
+       <string>Cam1:</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>1180</x>
+        <x>1190</x>
         <y>420</y>
         <width>91</width>
         <height>31</height>
@@ -193,7 +193,7 @@
      <widget class="QSlider" name="qElev_verticalSlider">
       <property name="geometry">
        <rect>
-        <x>1260</x>
+        <x>1190</x>
         <y>460</y>
         <width>22</width>
         <height>160</height>
@@ -212,8 +212,8 @@
      <widget class="QSpinBox" name="qElev_spinBox">
       <property name="geometry">
        <rect>
-        <x>1180</x>
-        <y>630</y>
+        <x>1220</x>
+        <y>520</y>
         <width>42</width>
         <height>26</height>
        </rect>
@@ -225,8 +225,8 @@
      <widget class="QLineEdit" name="qCam1Pos_lineEdit">
       <property name="geometry">
        <rect>
-        <x>970</x>
-        <y>620</y>
+        <x>1080</x>
+        <y>520</y>
         <width>51</width>
         <height>26</height>
        </rect>
@@ -245,7 +245,7 @@
       <property name="geometry">
        <rect>
         <x>1240</x>
-        <y>370</y>
+        <y>320</y>
         <width>91</width>
         <height>31</height>
        </rect>
@@ -266,7 +266,7 @@
       <property name="geometry">
        <rect>
         <x>360</x>
-        <y>620</y>
+        <y>610</y>
         <width>100</width>
         <height>50</height>
        </rect>
@@ -290,7 +290,7 @@
       <property name="geometry">
        <rect>
         <x>500</x>
-        <y>620</y>
+        <y>610</y>
         <width>100</width>
         <height>50</height>
        </rect>
@@ -314,7 +314,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>50</y>
+        <y>40</y>
         <width>901</width>
         <height>571</height>
        </rect>
@@ -361,7 +361,7 @@
        </font>
       </property>
       <property name="text">
-       <string>Connect to BeagleBone...</string>
+       <string>Connect to Camera...</string>
       </property>
      </widget>
      <widget class="QPushButton" name="qVideoWindow_pushButton">
@@ -399,8 +399,8 @@
      <widget class="QToolButton" name="q_toolButton_Options">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>10</y>
+        <x>1210</x>
+        <y>0</y>
         <width>101</width>
         <height>31</height>
        </rect>
@@ -414,11 +414,11 @@
        <string>Options...</string>
       </property>
      </widget>
-     <widget class="QSpinBox" name="qVel_spinBox">
+     <widget class="QSpinBox" name="spinBox">
       <property name="geometry">
        <rect>
         <x>1180</x>
-        <y>370</y>
+        <y>320</y>
         <width>51</width>
         <height>31</height>
        </rect>
@@ -449,199 +449,7 @@
        <enum>QFrame::Box</enum>
       </property>
       <property name="text">
-       <string>Joystick</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="qElevDown_pushButton_2">
-      <property name="geometry">
-       <rect>
-        <x>1170</x>
-        <y>540</y>
-        <width>51</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="icon">
-       <iconset>
-        <normaloff>arrow_down.png</normaloff>arrow_down.png</iconset>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>50</width>
-        <height>50</height>
-       </size>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="qElevUp_pushButton_2">
-      <property name="geometry">
-       <rect>
-        <x>1170</x>
-        <y>460</y>
-        <width>51</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="icon">
-       <iconset>
-        <normaloff>arrow_up.png</normaloff>arrow_up.png</iconset>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>50</width>
-        <height>50</height>
-       </size>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="qLED_pushButton">
-      <property name="geometry">
-       <rect>
-        <x>1200</x>
-        <y>60</y>
-        <width>80</width>
-        <height>80</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="icon">
-       <iconset resource="images.qrc">
-        <normaloff>:/images/headlight2.png</normaloff>:/images/headlight2.png</iconset>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>60</width>
-        <height>60</height>
-       </size>
-      </property>
-      <property name="checkable">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="qAlarm_pushButton">
-      <property name="geometry">
-       <rect>
-        <x>1200</x>
-        <y>170</y>
-        <width>80</width>
-        <height>80</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="icon">
-       <iconset resource="images.qrc">
-        <normaloff>:/images/speaker.svg</normaloff>:/images/speaker.svg</iconset>
-      </property>
-      <property name="iconSize">
-       <size>
-        <width>60</width>
-        <height>60</height>
-       </size>
-      </property>
-      <property name="checkable">
-       <bool>true</bool>
-      </property>
-      <property name="checked">
-       <bool>false</bool>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="qConnect_pushButton_2">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>1130</x>
-        <y>0</y>
-        <width>171</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Reconnect to BBB</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="qDisconnect_pushButton">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>170</x>
-        <y>10</y>
-        <width>121</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Disconnect</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="qRoom_label">
-      <property name="geometry">
-       <rect>
-        <x>530</x>
-        <y>10</y>
-        <width>63</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Room:</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="qRoom_lineEdit">
-      <property name="geometry">
-       <rect>
-        <x>590</x>
-        <y>10</y>
-        <width>71</width>
-        <height>26</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>MEC-2</string>
-      </property>
-     </widget>
-     <widget class="QCheckBox" name="qRoom_checkBox">
-      <property name="geometry">
-       <rect>
-        <x>700</x>
-        <y>10</y>
-        <width>131</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>12</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Room Light</string>
+       <string>TextLabel</string>
       </property>
      </widget>
     </widget>
@@ -1137,12 +945,10 @@ hr { height: 1px; border-width: 0; }
    </property>
    <widget class="QMenu" name="menuRoverData">
     <property name="title">
-     <string>Options</string>
+     <string>Info</string>
     </property>
     <addaction name="qStatus_action"/>
     <addaction name="qTraj_action"/>
-    <addaction name="qConnections_action"/>
-    <addaction name="qTimer_action"/>
    </widget>
    <addaction name="menuRoverData"/>
   </widget>
@@ -1157,19 +963,7 @@ hr { height: 1px; border-width: 0; }
     <string>Trajectory</string>
    </property>
   </action>
-  <action name="qConnections_action">
-   <property name="text">
-    <string>Connections</string>
-   </property>
-  </action>
-  <action name="qTimer_action">
-   <property name="text">
-    <string>Timer Settings</string>
-   </property>
-  </action>
  </widget>
- <resources>
-  <include location="images.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
