--- a/Software/GUI/Rover_test/options.ui
+++ b/Software/GUI/Rover_test/options.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Connections</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="2" column="0">
