--- a/Software/GUI/Rover_test/timerdialog.ui
+++ b/Software/GUI/Rover_test/timerdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Timer Settings</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="4" column="0">
