--- a/Software/SimuladorPuertoSerieFPGA/MainWindow.ui
+++ b/Software/SimuladorPuertoSerieFPGA/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>663</width>
-    <height>227</height>
+    <width>667</width>
+    <height>312</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,65 +16,113 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="1">
-     <widget class="QSpinBox" name="qenableScissorSpinBox">
-      <property name="maximum">
-       <number>1</number>
-      </property>
-     </widget>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>EN SCISSOR (1 = STOP)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>EN SERVO</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>DIR SCISSOR</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>DIR SERVO</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="1" column="1">
-     <widget class="QSpinBox" name="qenableServoSpinBox">
-      <property name="maximum">
-       <number>1</number>
-      </property>
-     </widget>
+    <item row="0" column="2" colspan="2">
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QSpinBox" name="qenableScissorSpinBox">
+        <property name="maximum">
+         <number>1</number>
+        </property>
+        <property name="value">
+         <number>1</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSpinBox" name="qenableServoSpinBox">
+        <property name="maximum">
+         <number>1</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSpinBox" name="qdirScissorSpinBox">
+        <property name="maximum">
+         <number>1</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSpinBox" name="qdirServoSpinBox">
+        <property name="maximum">
+         <number>1</number>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="4" column="1">
-     <widget class="QSpinBox" name="qdirServoSpinBox">
-      <property name="maximum">
-       <number>1</number>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="1">
+    <item row="6" column="1" colspan="2">
      <widget class="QPushButton" name="qSendLine_pushButton">
       <property name="text">
-       <string>Enviar</string>
+       <string>START BROADCASTING WITH FPGA</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QSpinBox" name="qdirScissorSpinBox">
-      <property name="maximum">
-       <number>1</number>
-      </property>
-     </widget>
+    <item row="0" column="4">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QSlider" name="qLeftMotor">
+        <property name="minimum">
+         <number>-100</number>
+        </property>
+        <property name="maximum">
+         <number>100</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSlider" name="qRighthmotor">
+        <property name="minimum">
+         <number>-100</number>
+        </property>
+        <property name="maximum">
+         <number>100</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
+    <item row="6" column="4">
+     <widget class="QPushButton" name="qStartSendMD_pushButton">
       <property name="text">
-       <string>EN SCISSOR</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>EN SERVO</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_3">
-      <property name="text">
-       <string>DIR SCISSOR</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>DIR SERVO</string>
+       <string>START BROADCASTING MOTORDRIVERS</string>
       </property>
      </widget>
     </item>
@@ -85,7 +133,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>663</width>
+     <width>667</width>
      <height>22</height>
     </rect>
    </property>
