--- a/Software/SimuladorPuertoSerieFPGA/MainWindow.ui
+++ b/Software/SimuladorPuertoSerieFPGA/MainWindow.ui
@@ -82,13 +82,6 @@
       </item>
      </layout>
     </item>
-    <item row="6" column="1" colspan="2">
-     <widget class="QPushButton" name="qSendLine_pushButton">
-      <property name="text">
-       <string>START BROADCASTING WITH FPGA</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="4">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -119,12 +112,34 @@
       </item>
      </layout>
     </item>
-    <item row="6" column="4">
-     <widget class="QPushButton" name="qStartSendMD_pushButton">
-      <property name="text">
-       <string>START BROADCASTING MOTORDRIVERS</string>
-      </property>
-     </widget>
+    <item row="1" column="1" colspan="2">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QPushButton" name="qSendLine_pushButton">
+        <property name="text">
+         <string>START BROADCASTING WITH FPGA</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="1" column="3" colspan="2">
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QPushButton" name="qParaMD_pushButton">
+        <property name="text">
+         <string>PARAAAAA</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="qStartSendMD_pushButton">
+        <property name="text">
+         <string>START BROADCASTING MOTORDRIVERS</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
