--- a/Software/GUI/Rover_test/mainwindow.ui
+++ b/Software/GUI/Rover_test/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -212,8 +212,8 @@
      <widget class="QSpinBox" name="qElev_spinBox">
       <property name="geometry">
        <rect>
-        <x>1180</x>
-        <y>630</y>
+        <x>1175</x>
+        <y>620</y>
         <width>42</width>
         <height>26</height>
        </rect>
@@ -576,6 +576,19 @@
       </property>
       <property name="text">
        <string>Connection failed!</string>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="qElev_spinBox_2">
+      <property name="geometry">
+       <rect>
+        <x>975</x>
+        <y>620</y>
+        <width>42</width>
+        <height>26</height>
+       </rect>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
     </widget>
